Use tex macros for $\F$ and $\G$ inside MathJax

--- a/Experiments/Evaluation.ipynb
+++ b/Experiments/Evaluation.ipynb
@@ -75,8 +75,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$\\newcommand{\\F}{\\mathsf{F}}$\n",
+    "$\\newcommand{\\G}{\\mathsf{G}}$\n",
+    "$\\newcommand{\\FG}{\\mathsf{F,G}}$\n",
     "## Formulae\n",
-    "We evaluate our translation on randomly generated formulae. We use Spot to generate them. The following function uses spot's randltl to generate and process formulae. It allows to filter the formulae using the function `func` (this feature is not used here) and also removes formulae $\\top$ and $\\bot$. Further, we remove all $\\mathsf{M}$ and $\\mathsf{W}$ operators as LTL3BA does not understand them. The `relabel_bse` function renames $\\mathsf{G}(a \\lor b)$ into $\\mathsf{G}a$ and thus it keeps only on formula of such type."
+    "We evaluate our translation on randomly generated formulae. We use Spot to generate them. The following function uses spot's randltl to generate and process formulae. It allows to filter the formulae using the function `func` (this feature is not used here) and also removes formulae $\\top$ and $\\bot$. Further, we remove all $\\mathsf{M}$ and $\\mathsf{W}$ operators as LTL3BA does not understand them. The `relabel_bse` function renames $\\G(a \\lor b)$ into $\\G a$ and thus it keeps only on formula of such type."
    ]
   },
   {
@@ -113,7 +116,7 @@
    "metadata": {},
    "source": [
     "### Generate Formulae\n",
-    "We generate 500 random formulae from the $LTL(\\mathsf{F},\\mathsf{G})$ fragment and save them to the file `formulae/fg.ltl`."
+    "We generate 500 random formulae from the $LTL(\\F,\\G)$ fragment and save them to the file `formulae/fg.ltl`."
    ]
   },
   {
@@ -133,14 +136,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impact of F- and G-merging"
+    "## Impact of $\\F$- and $\\FG$-merging"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compare the $\\mathsf{F}$- and $\\mathsf{F,G}$-merging translation to the basic one. We compare the sizes of SLAA (alternating) and TELA (nondeterministic)."
+    "We compare the $\\F$- and $\\FG$-merging translation to the basic one. We compare the sizes of SLAA (alternating) and TELA (nondeterministic)."
    ]
   },
   {
@@ -734,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compare LTL3TELA with $\\mathsf{F,G}$-merging and the complement optimization to Spot and LTL3BA. We use the same set of formulae as before."
+    "We compare LTL3TELA with $\\FG$-merging and the complement optimization to Spot and LTL3BA. We use the same set of formulae as before."
    ]
   },
   {
