Evaluation on formulae outside LTL(F,G) added.

--- a/Experiments/Evaluation.ipynb
+++ b/Experiments/Evaluation.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiments for TACAS paper"
+    "# Experiments for TACAS'18\n",
+    "- Paper: *LTL to nondeterministic Emerson-Lei Automata*\n",
+    "- Authors: *František Blahoudek, Juraj Major, Jan Strejček*"
    ]
   },
   {
@@ -143,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compare the $\\F$- and $\\FG$-merging translation to the basic one. We compare the sizes of SLAA (alternating) and TELA (nondeterministic)."
+    "We compare the $\\F$- and $\\FG$-merging translation to the basic one. We compare the sizes of SLAA (alternating) and TELA (nondeterministic). To really measure the impact of merging, the SPOT's reductions techniques are disabled here (`-u0 -z0`)."
    ]
   },
   {
@@ -789,21 +791,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compute the values for Virtual Best (VB) translators. A VB is a virtual tool that would run a set of tools on a given formula and returned an automaton with the minimal number of states, transitions, or nondeterministic states. `VB(TGBA)` runs all LTL to TGBA translators, `VB(All)` chooses from all tools (including LTL3TELA). "
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "comp.compute_best(tgba,'VB(TGBA)')\n",
-    "comp.compute_best(None,'VB(All)')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now we compute the cummulative numbers for each category (stored in cols) and we shape the data into nice table."
    ]
   },
@@ -1015,6 +1002,196 @@
    "source": [
     "print(t2.to_latex(bold_rows=True))\n",
     "print(t2.to_latex(bold_rows=True),file=open('tacas_t2.tex','w'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Additional evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We evaluate LTL3TELA also on formulae outside the fragment LTL($\\F$,$\\G$). However, we pick formulae where at least some $\\F$-merging can apply."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from experiments_lib import has_f_merging\n",
+    "mergable_f = 'formulae/merge.ltl'\n",
+    "generate(500,has_f_merging,filename=mergable_f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We reuse the settings from the above experiments, namely tools' configurations, their order, and columns to follow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merge = LtlcrossRunner(tools,res_filename='merge.csv',\n",
+    "                           formula_files=[mergable_f],\n",
+    "                           cols=cols)\n",
+    "if rerun:\n",
+    "    merge.run_ltlcross()\n",
+    "merge.parse_results()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We compute the values for Virtual Best (VB) translators. A VB is a virtual tool that would run a set of tools on a given formula and returned an automaton with the minimal number of states, transitions, or nondeterministic states. `VB(TGBA)` runs all LTL to TGBA translators, `VB(All)` chooses from all tools (including LTL3TELA)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge.compute_best(tgba,'VB(TGBA)')\n",
+    "merge.compute_best(None,'VB(All)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also compute the cummulative numbers for each category (stored in cols) and we shape the data into nice table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>column</th>\n",
+       "      <th>states</th>\n",
+       "      <th>transitions</th>\n",
+       "      <th>deterministic</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tool</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LTL3BA</th>\n",
+       "      <td>2826</td>\n",
+       "      <td>23135</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SPOT-det</th>\n",
+       "      <td>2730</td>\n",
+       "      <td>23095</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SPOT-small</th>\n",
+       "      <td>2728</td>\n",
+       "      <td>23086</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LTL3TELA</th>\n",
+       "      <td>2611</td>\n",
+       "      <td>24247</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LTL3TELA+compl</th>\n",
+       "      <td>2486</td>\n",
+       "      <td>23412</td>\n",
+       "      <td>128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VB(TGBA)</th>\n",
+       "      <td>2724</td>\n",
+       "      <td>22556</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VB(All)</th>\n",
+       "      <td>2313</td>\n",
+       "      <td>20223</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "column          states  transitions  deterministic\n",
+       "tool                                              \n",
+       "LTL3BA            2826        23135             17\n",
+       "SPOT-det          2730        23095             33\n",
+       "SPOT-small        2728        23086             31\n",
+       "LTL3TELA          2611        24247            101\n",
+       "LTL3TELA+compl    2486        23412            128\n",
+       "VB(TGBA)          2724        22556             33\n",
+       "VB(All)           2313        20223            142"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = merge.cummulative(col=cols).unstack(level=0)\n",
+    "tmp = tmp.loc[tgba+['LTL3TELA',\"LTL3TELA+compl\"]+merge.mins,:][cols]\n",
+    "tmp2 = tmp.loc[:,['states','transitions']]\n",
+    "tmp2[\"deterministic\"] = 500-tmp.nondet_aut\n",
+    "tmp2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can conclude that on general formulae with at least some merging the advantage of merging is not that dramatic as in case of formulae from LTL($\\F$,$\\G$). We can also observe more impact delivered by the complement optimization (For a formula $\\varphi$ we translate both $\\varphi$ and $\\neg\\varphi$. In case that the automaton for $\\neg\\varphi$ is deterministic and smaller, we can complement its acceptance formula to get automaton for $\\varphi$)."
    ]
   }
  ],
