add notebook with the real data (with reductions of Spot enabled)

--- a/Experiments/Evaluation_TACAS18.ipynb
+++ b/Experiments/Evaluation_TACAS18.ipynb
@@ -4,9 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiments for TACAS'18\n",
+    "# Experiments for TACAS'18 - the original (submitted) version\n",
     "- Paper: *LTL to nondeterministic Emerson-Lei Automata*\n",
     "- Authors: *František Blahoudek, Juraj Major, Jan Strejček*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IMPORTANT: ##\n",
+    "We have messed up setting of LTL3TELA for its evaluation. In particular, we disabled Spot's reductions by accident and thus we presented worse results than they are in reality. This notebook shows and generates the (incorrect) data used for the submission. The notebook [Evaluation_TACAS18_corrected](Evaluation_TACAS18_corrected.ipynb) contains the results where LTL3TELA uses Spot's automata reductions as claimed in the paper. We appologize for any inconvenience."
    ]
   },
   {
@@ -791,7 +799,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we compute the cummulative numbers for each category (stored in cols) and we shape the data into nice table."
+    "We compute the cummulative numbers for each category (stored in cols) and we shape the data into nice table."
    ]
   },
   {
@@ -1008,7 +1016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Additional evaluation"
+    "## Additional evaluation"
    ]
   },
   {
