highlighting learned to ignore 0

--- a/Experiments/Evaluation_ATVA19.ipynb
+++ b/Experiments/Evaluation_ATVA19.ipynb
@@ -270,7 +270,7 @@
        "      <th>edges</th>\n",
        "      <th>acc</th>\n",
        "      <th>TO.literature</th>\n",
-       "      <th>err.literature</th>\n",
+       "      <th>PE.literature</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tool</th>\n",
@@ -319,12 +319,12 @@
        "</div>"
       ],
       "text/plain": [
-       "             states    edges   acc  TO.literature  err.literature\n",
-       "tool                                                             \n",
-       "ltl3tela-D1    2536    10641   454             39               0\n",
-       "ltl2tgba-DG    3905    26643   652             20               0\n",
-       "delag          8661  2209807  1196             11              10\n",
-       "rabinizer4     2969    12358  1133             12               8"
+       "             states    edges   acc  TO.literature  PE.literature\n",
+       "tool                                                            \n",
+       "ltl3tela-D1    2536    10641   454             39              0\n",
+       "ltl2tgba-DG    3905    26643   652             20              0\n",
+       "delag          8661  2209807  1196             11             10\n",
+       "rabinizer4     2969    12358  1133             12              8"
       ]
      },
      "execution_count": 10,
@@ -334,7 +334,7 @@
    ],
    "source": [
     "det_to = pd.DataFrame(d_data_patterns.get_error_count(),columns=['TO.literature'])\n",
-    "det_err = pd.DataFrame(d_data_patterns.get_error_count('parse error',False),columns=['err.literature'])\n",
+    "det_err = pd.DataFrame(d_data_patterns.get_error_count('parse error',False),columns=['PE.literature'])\n",
     "det_lit = d_data_patterns.cummulative(col = d_cols).unstack(level = 0).loc[d_order, d_cols]\n",
     "det_lit = pd.concat([det_lit,det_to,det_err],axis=1,join='inner',sort=False)\n",
     "det_lit"
@@ -772,7 +772,7 @@
        "      <th>edges.literature</th>\n",
        "      <th>acc.literature</th>\n",
        "      <th>TO.literature</th>\n",
-       "      <th>err.literature</th>\n",
+       "      <th>PE.literature</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tool</th>\n",
@@ -843,12 +843,12 @@
        "delag                 7176         71672        3089               8661   \n",
        "rabinizer4            7581         31099        2786               2969   \n",
        "\n",
-       "             edges.literature  acc.literature  TO.literature  err.literature  \n",
-       "tool                                                                          \n",
-       "ltl3tela-D1             10641             454             39               0  \n",
-       "ltl2tgba-DG             26643             652             20               0  \n",
-       "delag                 2209807            1196             11              10  \n",
-       "rabinizer4              12358            1133             12               8  "
+       "             edges.literature  acc.literature  TO.literature  PE.literature  \n",
+       "tool                                                                         \n",
+       "ltl3tela-D1             10641             454             39              0  \n",
+       "ltl2tgba-DG             26643             652             20              0  \n",
+       "delag                 2209807            1196             11             10  \n",
+       "rabinizer4              12358            1133             12              8  "
       ]
      },
      "execution_count": 14,
@@ -903,7 +903,7 @@
        "      <th>edges</th>\n",
        "      <th>acc</th>\n",
        "      <th>TO</th>\n",
-       "      <th>err</th>\n",
+       "      <th>PE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tool</th>\n",
@@ -968,7 +968,7 @@
       ],
       "text/plain": [
        "            random              literature                       \n",
-       "            states  edges   acc     states    edges   acc  TO err\n",
+       "            states  edges   acc     states    edges   acc  TO  PE\n",
        "tool                                                             \n",
        "ltl3tela-D1   5934  18520  1268       2536    10641   454  39   0\n",
        "ltl2tgba-DG   6799  24131  1575       3905    26643   652  20   0\n",
@@ -1182,7 +1182,7 @@
        "      <th>edges</th>\n",
        "      <th>acc</th>\n",
        "      <th>TO.literature</th>\n",
-       "      <th>err.literature</th>\n",
+       "      <th>PE.literature</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tool</th>\n",
@@ -1231,12 +1231,12 @@
        "</div>"
       ],
       "text/plain": [
-       "            states  edges  acc  TO.literature  err.literature\n",
-       "tool                                                         \n",
-       "ltl3tela      2378  20718  544             28               0\n",
-       "ltl2tgba-G    2398  20555  642             12               0\n",
-       "ltl2tgba      2651   8721  502             11               0\n",
-       "ltl3ba        4654  21180  822              4               0"
+       "            states  edges  acc  TO.literature  PE.literature\n",
+       "tool                                                        \n",
+       "ltl3tela      2378  20718  544             28              0\n",
+       "ltl2tgba-G    2398  20555  642             12              0\n",
+       "ltl2tgba      2651   8721  502             11              0\n",
+       "ltl3ba        4654  21180  822              4              0"
       ]
      },
      "execution_count": 22,
@@ -1246,7 +1246,7 @@
    ],
    "source": [
     "nd_to = pd.DataFrame(n_data_patterns.get_error_count(),columns=['TO.literature'])\n",
-    "nd_err = pd.DataFrame(n_data_patterns.get_error_count('parse error',False),columns=['err.literature'])\n",
+    "nd_err = pd.DataFrame(n_data_patterns.get_error_count('parse error',False),columns=['PE.literature'])\n",
     "nd_lit = n_data_patterns.cummulative(col = n_cols).unstack(level = 0).loc[n_order, n_cols]\n",
     "nd_lit = pd.concat([nd_lit,nd_to,nd_err],axis=1,join='inner',sort=False)\n",
     "nd_lit"
@@ -1508,7 +1508,7 @@
        "      <th>edges.literature</th>\n",
        "      <th>acc.literature</th>\n",
        "      <th>TO.literature</th>\n",
-       "      <th>err.literature</th>\n",
+       "      <th>PE.literature</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tool</th>\n",
@@ -1579,12 +1579,12 @@
        "ltl2tgba             5413         13059        1034               2651   \n",
        "ltl3ba               6103         15636        1616               4654   \n",
        "\n",
-       "            edges.literature  acc.literature  TO.literature  err.literature  \n",
-       "tool                                                                         \n",
-       "ltl3tela               20718             544             28               0  \n",
-       "ltl2tgba-G             20555             642             12               0  \n",
-       "ltl2tgba                8721             502             11               0  \n",
-       "ltl3ba                 21180             822              4               0  "
+       "            edges.literature  acc.literature  TO.literature  PE.literature  \n",
+       "tool                                                                        \n",
+       "ltl3tela               20718             544             28              0  \n",
+       "ltl2tgba-G             20555             642             12              0  \n",
+       "ltl2tgba                8721             502             11              0  \n",
+       "ltl3ba                 21180             822              4              0  "
       ]
      },
      "execution_count": 25,
@@ -1639,7 +1639,7 @@
        "      <th>edges</th>\n",
        "      <th>acc</th>\n",
        "      <th>TO</th>\n",
-       "      <th>err</th>\n",
+       "      <th>PE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tool</th>\n",
@@ -1703,13 +1703,13 @@
        "</div>"
       ],
       "text/plain": [
-       "           random              literature                    \n",
-       "           states  edges   acc     states  edges  acc  TO err\n",
-       "tool                                                         \n",
-       "ltl3tela     5109  12481  1135       2378  20718  544  28   0\n",
-       "ltl2tgba-G   5391  13144  1041       2398  20555  642  12   0\n",
-       "ltl2tgba     5413  13059  1034       2651   8721  502  11   0\n",
-       "ltl3ba       6103  15636  1616       4654  21180  822   4   0"
+       "           random              literature                   \n",
+       "           states  edges   acc     states  edges  acc  TO PE\n",
+       "tool                                                        \n",
+       "ltl3tela     5109  12481  1135       2378  20718  544  28  0\n",
+       "ltl2tgba-G   5391  13144  1041       2398  20555  642  12  0\n",
+       "ltl2tgba     5413  13059  1034       2651   8721  502  11  0\n",
+       "ltl3ba       6103  15636  1616       4654  21180  822   4  0"
       ]
      },
      "execution_count": 26,
@@ -1854,7 +1854,7 @@
        "      <th>edges</th>\n",
        "      <th>acc</th>\n",
        "      <th>TO</th>\n",
-       "      <th>err</th>\n",
+       "      <th>PE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tool</th>\n",
@@ -1919,7 +1919,7 @@
       ],
       "text/plain": [
        "            random              literature                       \n",
-       "            states  edges   acc     states    edges   acc  TO err\n",
+       "            states  edges   acc     states    edges   acc  TO  PE\n",
        "tool                                                             \n",
        "ltl3tela-D1   5934  18520  1268       2536    10641   454  39   0\n",
        "ltl2tgba-DG   6799  24131  1575       3905    26643   652  20   0\n",
@@ -1980,7 +1980,7 @@
        "      <th>edges</th>\n",
        "      <th>acc</th>\n",
        "      <th>TO</th>\n",
-       "      <th>err</th>\n",
+       "      <th>PE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
@@ -2104,7 +2104,7 @@
        "                 ltl3ba        6103  15636  1616       4654    21180   822   \n",
        "\n",
        "                                      \n",
-       "                              TO err  \n",
+       "                              TO  PE  \n",
        "                 tool                 \n",
        "deterministic    ltl3tela-D1  39   0  \n",
        "                 ltl2tgba-DG  20   0  \n",
