--- a/Experiments/Evaluation_ATVA19.ipynb
+++ b/Experiments/Evaluation_ATVA19.ipynb
@@ -39,10 +39,10 @@
      "output_type": "stream",
      "text": [
       "LTL3BA 1.1.3\n",
-      "LTL3TELA 1.2.1 (using Spot 2.7)\n",
-      "ltl2tgba (spot) 2.7\n",
+      "LTL3TELA 2.0.0 (using Spot 2.7.4)\n",
+      "ltl2tgba (spot) 2.7.4\n",
       "\n",
-      "Copyright (C) 2018  Laboratoire de Recherche et Développement de l'Epita.\n",
+      "Copyright (C) 2019  Laboratoire de Recherche et Développement de l'Epita.\n",
       "License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>.\n",
       "This is free software: you are free to change and redistribute it.\n",
       "There is NO WARRANTY, to the extent permitted by law.\n",
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2149,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2165,8 +2165,8 @@
    "source": [
     "d_lit_c = len(d_data_patterns.values.dropna())\n",
     "n_lit_c = len(n_data_patterns.values.dropna())\n",
-    "print(f'Number of formulas without errors:\\n' +\n",
-    "      f'   det: {d_lit_c}\\nnondet: {n_lit_c}')"
+    "print('Number of formulas without errors:\\n' +\n",
+    "      '   det: {}\\nnondet: {}'.format(d_lit_c, n_lit_c))"
    ]
   },
   {
@@ -2195,7 +2195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
