--- a/Experiments/Evaluation_ATVA19.ipynb
+++ b/Experiments/Evaluation_ATVA19.ipynb
@@ -2113,7 +2113,363 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Formulae excluded from the evaluation"
+    "## Cross comparisons\n",
+    "In the following tables, the value in `(row, col)` is the number of cases where tool `row` delivers a better automaton than tool `col`. Better means strictly smaller in the lexicographic order on `(#states, #acc marks, #edges)`. The last column in each row sums the number of such victories of the corresponding tool `row`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ltl3tela-D1</th>\n",
+       "      <th>ltl2tgba-DG</th>\n",
+       "      <th>delag</th>\n",
+       "      <th>rabinizer4</th>\n",
+       "      <th>V</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ltl3tela-D1</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>185</td>\n",
+       "      <td>294</td>\n",
+       "      <td>311</td>\n",
+       "      <td>790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ltl2tgba-DG</th>\n",
+       "      <td>0</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>279</td>\n",
+       "      <td>246</td>\n",
+       "      <td>525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>delag</th>\n",
+       "      <td>14</td>\n",
+       "      <td>26</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>148</td>\n",
+       "      <td>188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rabinizer4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>38</td>\n",
+       "      <td>188</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ltl3tela-D1  ltl2tgba-DG  delag  rabinizer4    V\n",
+       "ltl3tela-D1          nan          185    294         311  790\n",
+       "ltl2tgba-DG            0          nan    279         246  525\n",
+       "delag                 14           26    nan         148  188\n",
+       "rabinizer4            24           38    188         nan  250"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_data_patterns.cross_compare(include_fails=False,props=['states','acc','edges'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ltl3tela-D1</th>\n",
+       "      <th>ltl2tgba-DG</th>\n",
+       "      <th>delag</th>\n",
+       "      <th>rabinizer4</th>\n",
+       "      <th>V</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ltl3tela-D1</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>399</td>\n",
+       "      <td>892</td>\n",
+       "      <td>771</td>\n",
+       "      <td>2062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ltl2tgba-DG</th>\n",
+       "      <td>0</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>773</td>\n",
+       "      <td>595</td>\n",
+       "      <td>1368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>delag</th>\n",
+       "      <td>92</td>\n",
+       "      <td>213</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>331</td>\n",
+       "      <td>636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rabinizer4</th>\n",
+       "      <td>115</td>\n",
+       "      <td>246</td>\n",
+       "      <td>654</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>1015</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ltl3tela-D1  ltl2tgba-DG  delag  rabinizer4     V\n",
+       "ltl3tela-D1          nan          399    892         771  2062\n",
+       "ltl2tgba-DG            0          nan    773         595  1368\n",
+       "delag                 92          213    nan         331   636\n",
+       "rabinizer4           115          246    654         nan  1015"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_data_rand.cross_compare(include_fails=False,props=['states','acc','edges'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ltl3tela</th>\n",
+       "      <th>ltl2tgba</th>\n",
+       "      <th>ltl2tgba-G</th>\n",
+       "      <th>ltl3ba</th>\n",
+       "      <th>V</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ltl3tela</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>192</td>\n",
+       "      <td>133</td>\n",
+       "      <td>226</td>\n",
+       "      <td>551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ltl2tgba</th>\n",
+       "      <td>7</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>219</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ltl2tgba-G</th>\n",
+       "      <td>7</td>\n",
+       "      <td>62</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>237</td>\n",
+       "      <td>306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ltl3ba</th>\n",
+       "      <td>8</td>\n",
+       "      <td>76</td>\n",
+       "      <td>76</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ltl3tela  ltl2tgba  ltl2tgba-G  ltl3ba    V\n",
+       "ltl3tela         nan       192         133     226  551\n",
+       "ltl2tgba           7       nan           0     219  226\n",
+       "ltl2tgba-G         7        62         nan     237  306\n",
+       "ltl3ba             8        76          76     nan  160"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_data_patterns.cross_compare(include_fails=False,props=['states','acc','edges'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ltl3tela</th>\n",
+       "      <th>ltl2tgba</th>\n",
+       "      <th>ltl2tgba-G</th>\n",
+       "      <th>ltl3ba</th>\n",
+       "      <th>V</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ltl3tela</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>310</td>\n",
+       "      <td>279</td>\n",
+       "      <td>634</td>\n",
+       "      <td>1223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ltl2tgba</th>\n",
+       "      <td>24</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>23</td>\n",
+       "      <td>575</td>\n",
+       "      <td>622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ltl2tgba-G</th>\n",
+       "      <td>19</td>\n",
+       "      <td>44</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>590</td>\n",
+       "      <td>653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ltl3ba</th>\n",
+       "      <td>30</td>\n",
+       "      <td>116</td>\n",
+       "      <td>119</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>265</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ltl3tela  ltl2tgba  ltl2tgba-G  ltl3ba     V\n",
+       "ltl3tela         nan       310         279     634  1223\n",
+       "ltl2tgba          24       nan          23     575   622\n",
+       "ltl2tgba-G        19        44         nan     590   653\n",
+       "ltl3ba            30       116         119     nan   265"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_data_rand.cross_compare(include_fails=False,props=['states','acc','edges'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Formulae excluded from the evaluation"
    ]
   },
   {
@@ -3978,7 +4334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
