--- a/Experiments/Evaluation_TCS.ipynb
+++ b/Experiments/Evaluation_TCS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
     "rerun = False\n",
-    "nd_rerun = False\n",
-    "det_rerun = False"
+    "nd_rerun = True\n",
+    "det_rerun = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
-   "metadata": {},
+   "execution_count": 382,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,13 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
     "nd_tools = {\n",
     "    \"ltl3ba\": \"ltldo 'ltl3ba -H2' -f %f > %O\",\n",
-    "    \"ltl3tela_alt\": \"ltl3tela -p1 -i1 -X1 -f %f | autfilt --high --simplify-acceptance > %O\",\n",
+    "    \"ltl3tela_alt\": \"ltl3tela -p1 -i1 -X1 -f %f | autfilt --high > %O\",\n",
     "    \"ltl3tela\": \"ltl3tela -i1 -X1 -f %f > %O\",\n",
     "    \"ltl2tgba\": \"ltl2tgba -G %f > %O\"\n",
     "}\n",
@@ -184,12 +186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
     "det_tools = {\n",
-    "    \"ltl3tela_alt\": \"ltl3tela -p1 -i1 -X1 -f %f | autfilt --high --simplify-acceptance > %O\",\n",
+    "    \"ltl3tela_alt\": \"ltl3tela -p1 -i1 -X1 -f %f | autfilt --high > %O\",\n",
     "    \"ltl3tela_d\": \"ltl3tela -i1 -X1 -D1 -f %f > %O\",\n",
     "    \"ltl2tgba_d\": \"ltl2tgba -DG %f > %O\",\n",
     "    \"delag\": \"delag -i %f > %O\",\n",
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +440,7 @@
        "fgmerg_opt   3009  "
       ]
      },
-     "execution_count": 328,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,8 +451,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
-   "metadata": {},
+   "execution_count": 395,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -597,7 +601,7 @@
        "fgmerg_opt    645  "
       ]
      },
-     "execution_count": 329,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,19 +807,19 @@
     "kw = {}\n",
     "sc_plot(datasets[4]['data'],basic,fgm,'sc_lit.tex',size=size,kw=kw.copy())\n",
     "\n",
-    "size = (5.4,5.6)\n",
+    "size = (4.4,4.6)\n",
     "kw['title'] = 'literature'\n",
     "sc_plot(datasets[4]['data'],basic,fgm,'sc_lit.tex',size=size,kw=kw.copy())\n",
     "i = 0\n",
     "for suff in ['1','2','4','fg']:\n",
-    "    kw['title'] = 'rand'+suff\n",
+    "    kw['title'] = 'rnd'+suff\n",
     "    sc_plot(datasets[i]['data'],basic,fgm,'sc_rand{}.tex'.format(suff),size=size,kw=kw.copy())\n",
     "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -953,10 +957,10 @@
        "      <td>993</td>\n",
        "      <td>1348</td>\n",
        "      <td>61</td>\n",
-       "      <td>793</td>\n",
-       "      <td>899</td>\n",
-       "      <td>1143</td>\n",
-       "      <td>1648</td>\n",
+       "      <td>727</td>\n",
+       "      <td>842</td>\n",
+       "      <td>1087</td>\n",
+       "      <td>1579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>ltl3tela</td>\n",
@@ -1005,7 +1009,7 @@
        "                 states                                 acc                    \\\n",
        "             literature rand1 rand2 rand4 randfg literature rand1 rand2 rand4   \n",
        "tool                                                                            \n",
-       "ltl3tela_alt         21  1153  1077   993   1348         61   793   899  1143   \n",
+       "ltl3tela_alt         21  1153  1077   993   1348         61   727   842  1087   \n",
        "ltl3tela             19  1075  1006   904   1261         45   539   574   716   \n",
        "ltl2tgba             19  1243  1155  1063   1349         47   418   485   623   \n",
        "ltl3ba               51  1534  1547  1615   2191         37   612   697   819   \n",
@@ -1013,13 +1017,13 @@
        "                     \n",
        "             randfg  \n",
        "tool                 \n",
-       "ltl3tela_alt   1648  \n",
+       "ltl3tela_alt   1579  \n",
        "ltl3tela       1019  \n",
        "ltl2tgba       1014  \n",
        "ltl3ba         1156  "
       ]
      },
-     "execution_count": 341,
+     "execution_count": 407,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -1143,10 +1147,10 @@
        "      <td>241</td>\n",
        "      <td>381</td>\n",
        "      <td>23</td>\n",
-       "      <td>232</td>\n",
-       "      <td>211</td>\n",
-       "      <td>235</td>\n",
-       "      <td>414</td>\n",
+       "      <td>206</td>\n",
+       "      <td>193</td>\n",
+       "      <td>217</td>\n",
+       "      <td>390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>ltl3tela_d</td>\n",
@@ -1208,7 +1212,7 @@
        "                 states                                 acc                    \\\n",
        "             literature rand1 rand2 rand4 randfg literature rand1 rand2 rand4   \n",
        "tool                                                                            \n",
-       "ltl3tela_alt         10   353   266   241    381         23   232   211   235   \n",
+       "ltl3tela_alt         10   353   266   241    381         23   206   193   217   \n",
        "ltl3tela_d           10   353   266   241    381         23   185   168   194   \n",
        "ltl2tgba_d           10   384   288   263    383         23   188   179   200   \n",
        "delag                10   366   269   247    386         26   357   313   331   \n",
@@ -1217,14 +1221,14 @@
        "                     \n",
        "             randfg  \n",
        "tool                 \n",
-       "ltl3tela_alt    414  \n",
+       "ltl3tela_alt    390  \n",
        "ltl3tela_d      352  \n",
        "ltl2tgba_d      369  \n",
        "delag           606  \n",
        "rabinizer4      480  "
       ]
      },
-     "execution_count": 346,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1252,7 @@
       "{} & literature & rand1 & rand2 & rand4 & randfg & literature & rand1 & rand2 & rand4 & randfg \\\\\n",
       "tool         &            &       &       &       &        &            &       &       &       &        \\\\\n",
       "\\midrule\n",
-      "ltl3tela\\_alt &         21 &  1153 &  1077 &   993 &   1348 &         61 &   793 &   899 &  1143 &   1648 \\\\\n",
+      "ltl3tela\\_alt &         21 &  1153 &  1077 &   993 &   1348 &         61 &   727 &   842 &  1087 &   1579 \\\\\n",
       "ltl3tela     &         19 &  1075 &  1006 &   904 &   1261 &         45 &   539 &   574 &   716 &   1019 \\\\\n",
       "ltl2tgba     &         19 &  1243 &  1155 &  1063 &   1349 &         47 &   418 &   485 &   623 &   1014 \\\\\n",
       "ltl3ba       &         51 &  1534 &  1547 &  1615 &   2191 &         37 &   612 &   697 &   819 &   1156 \\\\\n",
@@ -1264,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1281,7 @@
       "{} & literature & rand1 & rand2 & rand4 & randfg & literature & rand1 & rand2 & rand4 & randfg \\\\\n",
       "tool         &            &       &       &       &        &            &       &       &       &        \\\\\n",
       "\\midrule\n",
-      "ltl3tela\\_alt &         10 &   353 &   266 &   241 &    381 &         23 &   232 &   211 &   235 &    414 \\\\\n",
+      "ltl3tela\\_alt &         10 &   353 &   266 &   241 &    381 &         23 &   206 &   193 &   217 &    390 \\\\\n",
       "ltl3tela\\_d   &         10 &   353 &   266 &   241 &    381 &         23 &   185 &   168 &   194 &    352 \\\\\n",
       "ltl2tgba\\_d   &         10 &   384 &   288 &   263 &    383 &         23 &   188 &   179 &   200 &    369 \\\\\n",
       "delag        &         10 &   366 &   269 &   247 &    386 &         26 &   357 &   313 &   331 &    606 \\\\\n",
@@ -1291,13 +1295,6 @@
    "source": [
     "print(det_t.to_latex())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
